--- a/The Land of Breakfast and Lunch.inform/Index/Details/77_A.html
+++ b/The Land of Breakfast and Lunch.inform/Index/Details/77_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<357;i++) {
+            for (var i=0;i<359;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -637,6 +637,9 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Riding</b>&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Riding <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.png></a><a name=A77_riding></a> (<i>past tense</i> rid)<br>
+    <hr><b>Riding</b>&nbsp;<a href="source:story.ni#line101"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Riding <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line101"><img border=0 src=inform:/doc_images/Reveal.png></a><a name=A77_riding></a> (<i>past tense</i> rid)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <i>None</i><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">&quot;ride [something]&quot;&nbsp;<a href="source:story.ni#line101"><img border=0 src=inform:/doc_images/Reveal.png></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>riding the horse</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line105"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <br><p class="hangingin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line102"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <br>
