Add richness to basic ruleset

--- a/The Land of Breakfast and Lunch.inform/Index/Contents.html
+++ b/The Land of Breakfast and Lunch.inform/Index/Contents.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<359;i++) {
+            for (var i=0;i<361;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -704,13 +704,16 @@
     <li class="leaded indent1"><span>Preamble</span><span>209 words&nbsp;<a href="source:story.ni#line1"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
     <p class="hangingin2"><font color="#808080"><i>You</i>, <i>shirt</i></font></p>
     <ul class="leaders">
-    <li class="leaded indent1"><span>Section 1 - General World Rules and Messages</span><span>82 words&nbsp;<a href="source:story.ni#line18"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+    <li class="leaded indent1"><span>Section 1 - General World Rules and Messages</span><span>225 words&nbsp;<a href="source:story.ni#line18"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
     <ul class="leaders">
-    <li class="leaded indent1"><span>Section 2 - The Land of Breakfast and Lunch</span><span>1197 words&nbsp;<a href="source:story.ni#line29"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+    <li class="leaded indent1"><span>Section 2 - The Land of Breakfast and Lunch</span><span>1196 words&nbsp;<a href="source:story.ni#line35"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
     <p class="hangingin2"><font color="#808080"><i>Path</i>, <i>Southmostpath</i>, <i>TLoBL</i>, <i>clearing</i>, <i>painted picnic table</i>, <i>Breakfast</i>, <i>part-of-a-complete-breakfast</i>, <i>bowl of Lieutenant Chomp</i>, <i>pitcher of milk</i>, <i>halved grapefruit</i>, <i>soft-boiled egg</i>, <i>Lunch</i>, <i>part-of-a-complete-lunch</i>, <i>grilled cheese sandwich</i>, <i>bowl of tomato soup</i>, <i>tray of antipasto</i></font></p>
     <ul class="leaders">
-    <li class="leaded indent1"><span>Section 3 - The Land of Unrealized Possibilities</span><span>553 words&nbsp;<a href="source:story.ni#line83"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+    <li class="leaded indent1"><span>Section 3 - The Land of Unrealized Possibilities</span><span>550 words&nbsp;<a href="source:story.ni#line91"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
     <p class="hangingin2"><font color="#808080"><i>Hopeful Path</i>, <i>TLoUP</i>, <i>toy box</i>, <i>wooden block</i>, <i>small heart shaped locket</i>, <i>faded picture of a child who looks a lot like you</i>, <i>small hobby horse</i></font></p>
+    <ul class="leaders">
+    <li class="leaded indent1"><span>Section 4 - The Land of Launching and Mooring</span><span>111 words&nbsp;<a href="source:story.ni#line122"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+    <p class="hangingin2"><font color="#808080"><i>Seaside Path</i>, <i>TLOLAM</i></font></p>
     <p>EXTENSIONS</p>
     <p class="hangingin2"><font color="#888">Included automatically by Inform</font></p><ul class="leaders"><li class="leaded indent2"><span>Standard Rules <a href='inform://Extensions/Extensions/Graham%20Nelson/Standard%20Rules.html' title="Standard Rules by Graham Nelson" STYLE="text-decoration: none"><img border=0 src=inform:/doc_images/help.png></a> <small>version 3/120430</small></span><span>42655 words</span></li></ul>
     <ul class="leaders"><li class="leaded indent2"><span>English Language <a href='inform://Extensions/Extensions/Graham%20Nelson/English%20Language.html' title="English Language by Graham Nelson" STYLE="text-decoration: none"><img border=0 src=inform:/doc_images/help.png></a> by Graham Nelson <small>version 1</small></span><span>2297 words</span></li></ul>
