--- a/The Land of Breakfast and Lunch.inform/Index/Details/61_A.html
+++ b/The Land of Breakfast and Lunch.inform/Index/Details/61_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<359;i++) {
+            for (var i=0;i<361;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -645,40 +645,41 @@
     the block rule and supply carry out and report rules, together perhaps
     with some further check rules.)<p><hr><p><b>Typed commands leading to this action</b><p>
     <p class="hangingin2">&quot;sleep/nap&quot;</p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor sleeping</i>&nbsp;&nbsp;<font color="#800000">block sleeping rule</font>&nbsp;&nbsp;<script language="JavaScript">
-    function pasteCode2930(code) {
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>sleeping</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line28"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <br><p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor sleeping</i>&nbsp;&nbsp;<font color="#800000">block sleeping rule</font>&nbsp;&nbsp;<script language="JavaScript">
+    function pasteCode2950(code) {
         var myProject = project();
 
         myProject.selectView('source');
         myProject.pasteCode('block sleeping rule');
     }
     </script>
-    <a href="javascript:pasteCode2930()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <script language="JavaScript">
-    function pasteCode2931(code) {
+    <a href="javascript:pasteCode2950()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <script language="JavaScript">
+    function pasteCode2951(code) {
         var myProject = project();
 
         myProject.selectView('source');
         myProject.pasteCode('The block sleeping rule is not listed in the check sleeping rulebook.[=0x000A=]');
     }
     </script>
-    <a href="javascript:pasteCode2931()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i>&nbsp;&nbsp;<a href="#" onclick="showResp('extra1000274', 'plus1000274'); return false;"><img border=0 id="plus1000274" src=inform:/doc_images/responses.png></a>&nbsp;1</p>
+    <a href="javascript:pasteCode2951()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i>&nbsp;&nbsp;<a href="#" onclick="showResp('extra1000274', 'plus1000274'); return false;"><img border=0 id="plus1000274" src=inform:/doc_images/responses.png></a>&nbsp;1</p>
     <div id="extra1000274" style="display: none;"><p class="in2">&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #ffffff; font-family: 'Courier New', Courier, monospace; background-color: #8080ff;">&nbsp;&nbsp;A&nbsp;&nbsp;</span> <span style="color: #000066;">"[We] [aren't] feeling especially drowsy."</span>&nbsp;&nbsp;<script language="JavaScript">
-    function pasteCode2932(code) {
+    function pasteCode2952(code) {
         var myProject = project();
 
         myProject.selectView('source');
         myProject.pasteCode('block sleeping rule response (A)');
     }
     </script>
-    <a href="javascript:pasteCode2932()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i>&nbsp;<script language="JavaScript">
-    function pasteCode2933(code) {
+    <a href="javascript:pasteCode2952()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i>&nbsp;<script language="JavaScript">
+    function pasteCode2953(code) {
         var myProject = project();
 
         myProject.selectView('source');
         myProject.pasteCode('block sleeping rule response (A) is [=0x0022=]New text.[=0x0022=].');
     }
     </script>
-    <a href="javascript:pasteCode2933()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>set</i></div>
+    <a href="javascript:pasteCode2953()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>set</i></div>
     <br>
     <!--CONTENT ENDS-->
     </font>
