--- a/The Land of Breakfast and Lunch.inform/Index/Details/7_A.html
+++ b/The Land of Breakfast and Lunch.inform/Index/Details/7_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<361;i++) {
+            for (var i=0;i<363;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -664,7 +664,9 @@
     }
     </script>
     <a href="javascript:pasteCode2233()"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
-    <br><p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>going south</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <br><p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going east</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line25"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>going west</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line27"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <br><p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>going south</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line47"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     <p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor going when the actor is on a supporter (called the chaise)</i>&nbsp;&nbsp;<font color="#800000">stand up before going rule</font>&nbsp;&nbsp;<script language="JavaScript">
     function pasteCode2234(code) {
         var myProject = project();
